Solve bugs
